Fix menu items alignment IE 11

--- a/bkb-dev.less
+++ b/bkb-dev.less
@@ -2809,6 +2809,8 @@ input:focus:-ms-input-placeholder {
 				display: table;
 				table-layout: fixed;
 				width: 100%;
+				// Fixes items alignment in IE11
+				overflow: hidden;
 
 			  }
 			  &.odd {
