--- a/bkb.less
+++ b/bkb.less
@@ -2715,6 +2715,8 @@ input:focus:-ms-input-placeholder {
 				display: table;
 				table-layout: fixed;
 				width: 100%;
+				// Fixes items alignment in IE11
+				overflow: hidden;
 
 			  }
 			  &.odd {
