--- a/extended/widgets/menu.less
+++ b/extended/widgets/menu.less
@@ -22,6 +22,8 @@
 				display: table;
 				table-layout: fixed;
 				width: 100%;
+				// Fixes items alignment in IE11
+				overflow: hidden;
 
 			  }
 			  &.odd {
